@@ -1,5 +1,6 @@
 /*
- * Copyright (c) 2012, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2026, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2025, Alibaba Group Holding Limited. All Rights Reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -121,7 +122,9 @@ import java.util.concurrent.ConcurrentMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import sun.text.spi.JavaTimeDateTimePatternProvider;
+import jdk.internal.util.DateTimeHelper;
+import jdk.internal.util.DecimalDigits;
+
 import sun.util.locale.provider.CalendarDataUtility;
 import sun.util.locale.provider.LocaleProviderAdapter;
 import sun.util.locale.provider.LocaleResources;
@@ -159,7 +162,6 @@ import sun.util.locale.provider.TimeZoneNameUtility;
  * @since 1.8
  */
 public final class DateTimeFormatterBuilder {
-
     /**
      * Query for a time-zone that is region-only.
      */
@@ -203,7 +205,7 @@ public final class DateTimeFormatterBuilder {
      * for the requested dateStyle and/or timeStyle.
      * <p>
      * If the locale contains the "rg" (region override)
-     * <a href="../../util/Locale.html#def_locale_extension">Unicode extensions</a>,
+     * {@linkplain Locale##def_locale_extension Unicode extensions},
      * the formatting pattern is overridden with the one appropriate for the region.
      *
      * @param dateStyle  the FormatStyle for the date, null for time-only pattern
@@ -220,11 +222,47 @@ public final class DateTimeFormatterBuilder {
         if (dateStyle == null && timeStyle == null) {
             throw new IllegalArgumentException("Either dateStyle or timeStyle must be non-null");
         }
-        LocaleProviderAdapter adapter = LocaleProviderAdapter.getAdapter(JavaTimeDateTimePatternProvider.class, locale);
-        JavaTimeDateTimePatternProvider provider = adapter.getJavaTimeDateTimePatternProvider();
-        return provider.getJavaTimeDateTimePattern(convertStyle(timeStyle),
-                         convertStyle(dateStyle), chrono.getCalendarType(),
+        LocaleProviderAdapter adapter = LocaleProviderAdapter.getAdapter(DateTimeFormatterPatternProvider.class, locale);
+        DateTimeFormatterPatternProvider provider = adapter.getDateTimeFormatterPatternProvider();
+        return provider.getDateTimeFormatterPattern(dateStyle, timeStyle,
+                         chrono.getCalendarType(),
                          CalendarDataUtility.findRegionOverride(locale));
+    }
+
+    /**
+     * Returns the formatting pattern for the requested template for a locale and chronology.
+     * The locale and chronology are used to lookup the locale specific format
+     * for the requested template.
+     * <p>
+     * If the locale contains the "rg" (region override)
+     * {@linkplain Locale##def_locale_extension Unicode extensions},
+     * the formatting pattern is overridden with the one appropriate for the region.
+     * <p>
+     * Refer to {@link #appendLocalized(String)} for the detail of {@code requestedTemplate}
+     * argument.
+     *
+     * @param requestedTemplate the requested template, not null
+     * @param chrono  the Chronology, non-null
+     * @param locale  the locale, non-null
+     * @return the locale and Chronology specific formatting pattern
+     * @throws IllegalArgumentException if {@code requestedTemplate} does not match
+     *      the regular expression syntax described in {@link #appendLocalized(String)}.
+     * @throws DateTimeException if a match for the localized pattern for
+     *      {@code requestedTemplate} is not available
+     * @see #appendLocalized(String)
+     * @since 19
+     */
+    public static String getLocalizedDateTimePattern(String requestedTemplate,
+                                                     Chronology chrono, Locale locale) {
+        Objects.requireNonNull(requestedTemplate, "requestedTemplate");
+        Objects.requireNonNull(chrono, "chrono");
+        Objects.requireNonNull(locale, "locale");
+        Locale override = CalendarDataUtility.findRegionOverride(locale);
+        LocaleProviderAdapter adapter = LocaleProviderAdapter.getAdapter(DateTimeFormatterPatternProvider.class, override);
+        DateTimeFormatterPatternProvider provider = adapter.getDateTimeFormatterPatternProvider();
+        return provider.getDateTimeFormatterPattern(requestedTemplate,
+                chrono.getCalendarType(),
+                override);
     }
 
     /**
@@ -317,6 +355,10 @@ public final class DateTimeFormatterBuilder {
      * The change will remain in force until the end of the formatter that is eventually
      * constructed or until {@code parseLenient} is called.
      *
+     * @implSpec A {@link Character#SPACE_SEPARATOR SPACE_SEPARATOR} in the input
+     * text will not match any other {@link Character#SPACE_SEPARATOR SPACE_SEPARATOR}s
+     * in the pattern with the strict parse style.
+     *
      * @return this, for chaining, not null
      */
     public DateTimeFormatterBuilder parseStrict() {
@@ -335,6 +377,10 @@ public final class DateTimeFormatterBuilder {
      * When used, this method changes the parsing to be lenient from this point onwards.
      * The change will remain in force until the end of the formatter that is eventually
      * constructed or until {@code parseStrict} is called.
+     *
+     * @implSpec A {@link Character#SPACE_SEPARATOR SPACE_SEPARATOR} in the input
+     * text will match any other {@link Character#SPACE_SEPARATOR SPACE_SEPARATOR}s
+     * in the pattern with the lenient parse style.
      *
      * @return this, for chaining, not null
      */
@@ -688,8 +734,8 @@ public final class DateTimeFormatterBuilder {
      * If the value is negative an exception will be thrown.
      * If the field does not have a fixed set of valid values then an
      * exception will be thrown.
-     * If the field value in the date-time to be printed is invalid it
-     * cannot be printed and an exception will be thrown.
+     * If the field value in the date-time to be printed is outside the
+     * range of valid values then an exception will be thrown.
      *
      * @param field  the field to append, not null
      * @param minWidth  the minimum width of the field excluding the decimal point, from 0 to 9
@@ -701,11 +747,20 @@ public final class DateTimeFormatterBuilder {
      */
     public DateTimeFormatterBuilder appendFraction(
             TemporalField field, int minWidth, int maxWidth, boolean decimalPoint) {
-        if (minWidth == maxWidth && decimalPoint == false) {
-            // adjacent parsing
-            appendValue(new FractionPrinterParser(field, minWidth, maxWidth, decimalPoint));
+        if (field == NANO_OF_SECOND) {
+            if (minWidth == maxWidth && decimalPoint == false) {
+                // adjacent parsing
+                appendValue(new NanosPrinterParser(minWidth, maxWidth, decimalPoint));
+            } else {
+                appendInternal(new NanosPrinterParser(minWidth, maxWidth, decimalPoint));
+            }
         } else {
-            appendInternal(new FractionPrinterParser(field, minWidth, maxWidth, decimalPoint));
+            if (minWidth == maxWidth && decimalPoint == false) {
+                // adjacent parsing
+                appendValue(new FractionPrinterParser(field, minWidth, maxWidth, decimalPoint));
+            } else {
+                appendInternal(new FractionPrinterParser(field, minWidth, maxWidth, decimalPoint));
+            }
         }
         return this;
     }
@@ -839,8 +894,10 @@ public final class DateTimeFormatterBuilder {
      * {@link DateTimeFormatter#parsedLeapSecond()} for full details.
      * <p>
      * When formatting, the instant will always be suffixed by 'Z' to indicate UTC.
-     * When parsing, the behaviour of {@link DateTimeFormatterBuilder#appendOffsetId()}
-     * will be used to parse the offset, converting the instant to UTC as necessary.
+     * When parsing, the lenient mode behaviour of
+     * {@link DateTimeFormatterBuilder#appendOffset(String, String)
+     * appendOffset("+HH", "Z")} will be used to parse the offset,
+     * converting the instant to UTC as necessary.
      * <p>
      * An alternative to this method is to format/parse the instant as a single
      * epoch-seconds value. That is achieved using {@code appendValue(INSTANT_SECONDS)}.
@@ -901,7 +958,7 @@ public final class DateTimeFormatterBuilder {
      * Appends the zone offset, such as '+01:00', to the formatter.
      * <p>
      * This appends an instruction to format/parse the offset ID to the builder.
-     * This is equivalent to calling {@code appendOffset("+HH:mm:ss", "Z")}.
+     * This is equivalent to calling {@code appendOffset("+HH:MM:ss", "Z")}.
      * See {@link #appendOffset(String, String)} for details on formatting
      * and parsing.
      *
@@ -1042,14 +1099,14 @@ public final class DateTimeFormatterBuilder {
      * During parsing, the text must match a known zone or offset.
      * There are two types of zone ID, offset-based, such as '+01:30' and
      * region-based, such as 'Europe/London'. These are parsed differently.
-     * If the parse starts with '+', '-', 'UT', 'UTC' or 'GMT', then the parser
-     * expects an offset-based zone and will not match region-based zones.
-     * The offset ID, such as '+02:30', may be at the start of the parse,
-     * or prefixed by  'UT', 'UTC' or 'GMT'. The offset ID parsing is
-     * equivalent to using {@link #appendOffset(String, String)} using the
-     * arguments 'HH:MM:ss' and the no offset string '0'.
-     * If the parse starts with 'UT', 'UTC' or 'GMT', and the parser cannot
-     * match a following offset ID, then {@link ZoneOffset#UTC} is selected.
+     * If the parse starts with '+' or '-', then the parser expects an
+     * offset-based zone and will not match region-based zones. The offset
+     * ID parsing is equivalent to using {@link #appendOffset(String, String)}
+     * using the arguments 'HH:MM:ss' and the no offset string '0'.
+     * If the parse starts with 'UT', 'UTC' or 'GMT', and the parser can
+     * match a following offset, then a region-based zone with the parsed
+     * offset will be returned, or else if the parser cannot match a following
+     * offset, then {@link ZoneOffset#UTC} is selected.
      * In all other cases, the list of known region-based zones is used to
      * find the longest available match. If no match is found, and the parse
      * starts with 'Z', then {@code ZoneOffset.UTC} is selected.
@@ -1063,9 +1120,9 @@ public final class DateTimeFormatterBuilder {
      *   "UTC"                     -- ZoneId.of("UTC")
      *   "GMT"                     -- ZoneId.of("GMT")
      *   "+01:30"                  -- ZoneOffset.of("+01:30")
-     *   "UT+01:30"                -- ZoneOffset.of("+01:30")
-     *   "UTC+01:30"               -- ZoneOffset.of("+01:30")
-     *   "GMT+01:30"               -- ZoneOffset.of("+01:30")
+     *   "UT+01:30"                -- ZoneId.of("UT+01:30")
+     *   "UTC+01:30"               -- ZoneId.of("UTC+01:30")
+     *   "GMT+01:30"               -- ZoneId.of("GMT+01:30")
      * </pre>
      *
      * @return this, for chaining, not null
@@ -1080,8 +1137,7 @@ public final class DateTimeFormatterBuilder {
      * Appends the time-zone region ID, such as 'Europe/Paris', to the formatter,
      * rejecting the zone ID if it is a {@code ZoneOffset}.
      * <p>
-     * This appends an instruction to format/parse the zone ID to the builder
-     * only if it is a region-based ID.
+     * This appends an instruction to format only region-based zone IDs to the builder.
      * <p>
      * During formatting, the zone is obtained using a mechanism equivalent
      * to querying the temporal with {@link TemporalQueries#zoneId()}.
@@ -1093,14 +1149,14 @@ public final class DateTimeFormatterBuilder {
      * During parsing, the text must match a known zone or offset.
      * There are two types of zone ID, offset-based, such as '+01:30' and
      * region-based, such as 'Europe/London'. These are parsed differently.
-     * If the parse starts with '+', '-', 'UT', 'UTC' or 'GMT', then the parser
-     * expects an offset-based zone and will not match region-based zones.
-     * The offset ID, such as '+02:30', may be at the start of the parse,
-     * or prefixed by  'UT', 'UTC' or 'GMT'. The offset ID parsing is
-     * equivalent to using {@link #appendOffset(String, String)} using the
-     * arguments 'HH:MM:ss' and the no offset string '0'.
-     * If the parse starts with 'UT', 'UTC' or 'GMT', and the parser cannot
-     * match a following offset ID, then {@link ZoneOffset#UTC} is selected.
+     * If the parse starts with '+' or '-', then the parser expects an
+     * offset-based zone and will not match region-based zones. The offset
+     * ID parsing is equivalent to using {@link #appendOffset(String, String)}
+     * using the arguments 'HH:MM:ss' and the no offset string '0'.
+     * If the parse starts with 'UT', 'UTC' or 'GMT', and the parser can
+     * match a following offset, then a region-based zone with the parsed
+     * offset will be returned, or else if the parser cannot match a following
+     * offset, then {@link ZoneOffset#UTC} is selected.
      * In all other cases, the list of known region-based zones is used to
      * find the longest available match. If no match is found, and the parse
      * starts with 'Z', then {@code ZoneOffset.UTC} is selected.
@@ -1114,9 +1170,9 @@ public final class DateTimeFormatterBuilder {
      *   "UTC"                     -- ZoneId.of("UTC")
      *   "GMT"                     -- ZoneId.of("GMT")
      *   "+01:30"                  -- ZoneOffset.of("+01:30")
-     *   "UT+01:30"                -- ZoneOffset.of("+01:30")
-     *   "UTC+01:30"               -- ZoneOffset.of("+01:30")
-     *   "GMT+01:30"               -- ZoneOffset.of("+01:30")
+     *   "UT+01:30"                -- ZoneId.of("UT+01:30")
+     *   "UTC+01:30"               -- ZoneId.of("UTC+01:30")
+     *   "GMT+01:30"               -- ZoneId.of("GMT+01:30")
      * </pre>
      * <p>
      * Note that this method is identical to {@code appendZoneId()} except
@@ -1151,14 +1207,14 @@ public final class DateTimeFormatterBuilder {
      * During parsing, the text must match a known zone or offset.
      * There are two types of zone ID, offset-based, such as '+01:30' and
      * region-based, such as 'Europe/London'. These are parsed differently.
-     * If the parse starts with '+', '-', 'UT', 'UTC' or 'GMT', then the parser
-     * expects an offset-based zone and will not match region-based zones.
-     * The offset ID, such as '+02:30', may be at the start of the parse,
-     * or prefixed by  'UT', 'UTC' or 'GMT'. The offset ID parsing is
-     * equivalent to using {@link #appendOffset(String, String)} using the
-     * arguments 'HH:MM:ss' and the no offset string '0'.
-     * If the parse starts with 'UT', 'UTC' or 'GMT', and the parser cannot
-     * match a following offset ID, then {@link ZoneOffset#UTC} is selected.
+     * If the parse starts with '+' or '-', then the parser expects an
+     * offset-based zone and will not match region-based zones. The offset
+     * ID parsing is equivalent to using {@link #appendOffset(String, String)}
+     * using the arguments 'HH:MM:ss' and the no offset string '0'.
+     * If the parse starts with 'UT', 'UTC' or 'GMT', and the parser can
+     * match a following offset, then a region-based zone with the parsed
+     * offset will be returned, or else if the parser cannot match a following
+     * offset, then {@link ZoneOffset#UTC} is selected.
      * In all other cases, the list of known region-based zones is used to
      * find the longest available match. If no match is found, and the parse
      * starts with 'Z', then {@code ZoneOffset.UTC} is selected.
@@ -1172,9 +1228,9 @@ public final class DateTimeFormatterBuilder {
      *   "UTC"                     -- ZoneId.of("UTC")
      *   "GMT"                     -- ZoneId.of("GMT")
      *   "+01:30"                  -- ZoneOffset.of("+01:30")
-     *   "UT+01:30"                -- ZoneOffset.of("UT+01:30")
-     *   "UTC+01:30"               -- ZoneOffset.of("UTC+01:30")
-     *   "GMT+01:30"               -- ZoneOffset.of("GMT+01:30")
+     *   "UT+01:30"                -- ZoneId.of("UT+01:30")
+     *   "UTC+01:30"               -- ZoneId.of("UTC+01:30")
+     *   "GMT+01:30"               -- ZoneId.of("GMT+01:30")
      * </pre>
      * <p>
      * Note that this method is identical to {@code appendZoneId()} except
@@ -1415,6 +1471,86 @@ public final class DateTimeFormatterBuilder {
     }
 
     //-----------------------------------------------------------------------
+    // RegEx pattern for skeleton validity checking
+    private static final Pattern VALID_TEMPLATE_PATTERN = Pattern.compile(
+        "G{0,5}" +        // Era
+        "y*" +            // Year
+        "Q{0,5}" +        // Quarter
+        "M{0,5}" +        // Month
+        "w*" +            // Week of Week Based Year
+        "E{0,5}" +        // Day of Week
+        "d{0,2}" +        // Day of Month
+        "B{0,5}" +        // Period/AmPm of Day
+        "[hHjC]{0,2}" +   // Hour of Day/AmPm
+        "m{0,2}" +        // Minute of Hour
+        "s{0,2}" +        // Second of Minute
+        "[vz]{0,4}");     // Zone
+    /**
+     * Appends a localized pattern to the formatter using the requested template.
+     * <p>
+     * This appends a localized section to the builder, suitable for outputting
+     * a date, time or date-time combination. The format of the localized
+     * section is lazily looked up based on three items:
+     * <ul>
+     * <li>the {@code requestedTemplate} specified to this method
+     * <li>the {@code Locale} of the {@code DateTimeFormatter}
+     * <li>the {@code Chronology} of the {@code DateTimeFormatter} unless overridden
+     * </ul>
+     * During formatting, the chronology is obtained from the temporal object
+     * being formatted, which may have been overridden by
+     * {@link DateTimeFormatter#withChronology(Chronology)}.
+     * <p>
+     * During parsing, if a chronology has already been parsed, then it is used.
+     * Otherwise the default from {@code DateTimeFormatter.withChronology(Chronology)}
+     * is used, with {@code IsoChronology} as the fallback.
+     * <p>
+     * The requested template is a series of typical pattern
+     * symbols in canonical order from the largest date or time unit to the smallest,
+     * which can be expressed with the following regular expression:
+     * {@snippet :
+     *      "G{0,5}" +        // Era
+     *      "y*" +            // Year
+     *      "Q{0,5}" +        // Quarter
+     *      "M{0,5}" +        // Month
+     *      "w*" +            // Week of Week Based Year
+     *      "E{0,5}" +        // Day of Week
+     *      "d{0,2}" +        // Day of Month
+     *      "B{0,5}" +        // Period/AmPm of Day
+     *      "[hHjC]{0,2}" +   // Hour of Day/AmPm (refer to LDML for 'j' and 'C')
+     *      "m{0,2}" +        // Minute of Hour
+     *      "s{0,2}" +        // Second of Minute
+     *      "[vz]{0,4}"       // Zone
+     * }
+     * All pattern symbols are optional, and each pattern symbol represents a field,
+     * for example, 'M' represents the Month field. The number of the pattern symbol letters follows the
+     * same presentation, such as "number" or "text" as in the
+     * <a href="./DateTimeFormatter.html#patterns">Patterns for Formatting and Parsing</a> section.
+     * Other pattern symbols in the requested template are invalid.
+     * <p>
+     * The mapping of the requested template to the closest of the available localized formats
+     * is defined by the
+     * <a href="https://www.unicode.org/reports/tr35/tr35-dates.html#availableFormats_appendItems">
+     * Unicode LDML specification</a>. For example, the formatter created from the requested template
+     * {@code yMMM} will format the date '2020-06-16' to 'Jun 2020' in the {@link Locale#US US locale}.
+     *
+     * @param requestedTemplate the requested template to use, not null
+     * @return this, for chaining, not null
+     * @throws IllegalArgumentException if {@code requestedTemplate} is invalid
+     *
+     * @spec https://www.unicode.org/reports/tr35 Unicode Locale Data Markup Language (LDML)
+     * @see #appendPattern(String)
+     * @since 19
+     */
+    public DateTimeFormatterBuilder appendLocalized(String requestedTemplate) {
+        Objects.requireNonNull(requestedTemplate, "requestedTemplate");
+        if (!VALID_TEMPLATE_PATTERN.matcher(requestedTemplate).matches()) {
+            throw new IllegalArgumentException("Requested template is invalid: " + requestedTemplate);
+        }
+        appendInternal(new LocalizedPrinterParser(requestedTemplate));
+        return this;
+    }
+
+    //-----------------------------------------------------------------------
     /**
      * Appends a character literal to the formatter.
      * <p>
@@ -1485,6 +1621,8 @@ public final class DateTimeFormatterBuilder {
      *
      * @param style the text style to use, not null
      * @return this, for chaining, not null
+     *
+     * @spec https://www.unicode.org/reports/tr35 Unicode Locale Data Markup Language (LDML)
      * @since 16
      */
     public DateTimeFormatterBuilder appendDayPeriodText(TextStyle style) {
@@ -1651,7 +1789,7 @@ public final class DateTimeFormatterBuilder {
      *    D       1      appendValue(ChronoField.DAY_OF_YEAR)
      *    DD      2      appendValue(ChronoField.DAY_OF_YEAR, 2, 3, SignStyle.NOT_NEGATIVE)
      *    DDD     3      appendValue(ChronoField.DAY_OF_YEAR, 3)
-     *    F       1      appendValue(ChronoField.ALIGNED_DAY_OF_WEEK_IN_MONTH)
+     *    F       1      appendValue(ChronoField.ALIGNED_WEEK_OF_MONTH)
      *    g..g    1..n   appendValue(JulianFields.MODIFIED_JULIAN_DAY, n, 19, SignStyle.NORMAL)
      *    E       1      appendText(ChronoField.DAY_OF_WEEK, TextStyle.SHORT)
      *    EE      2      appendText(ChronoField.DAY_OF_WEEK, TextStyle.SHORT)
@@ -1799,7 +1937,7 @@ public final class DateTimeFormatterBuilder {
                     padNext(pad); // pad and continue parsing
                 }
                 // main rules
-                TemporalField field = FIELD_MAP.get(cur);
+                TemporalField field = getField(cur);
                 if (field != null) {
                     parseField(cur, count, field);
                 } else if (cur == 'z') {
@@ -2047,48 +2185,55 @@ public final class DateTimeFormatterBuilder {
         }
     }
 
-    /** Map of letters to fields. */
-    private static final Map<Character, TemporalField> FIELD_MAP = new HashMap<>();
-    static {
+    /**
+     * Returns the TemporalField for the given pattern character.
+     *
+     * @param ch the pattern character
+     * @return the TemporalField for the given pattern character, or null if not applicable
+     */
+    private static TemporalField getField(char ch) {
         // SDF = SimpleDateFormat
-        FIELD_MAP.put('G', ChronoField.ERA);                       // SDF, LDML (different to both for 1/2 chars)
-        FIELD_MAP.put('y', ChronoField.YEAR_OF_ERA);               // SDF, LDML
-        FIELD_MAP.put('u', ChronoField.YEAR);                      // LDML (different in SDF)
-        FIELD_MAP.put('Q', IsoFields.QUARTER_OF_YEAR);             // LDML (removed quarter from 310)
-        FIELD_MAP.put('q', IsoFields.QUARTER_OF_YEAR);             // LDML (stand-alone)
-        FIELD_MAP.put('M', ChronoField.MONTH_OF_YEAR);             // SDF, LDML
-        FIELD_MAP.put('L', ChronoField.MONTH_OF_YEAR);             // SDF, LDML (stand-alone)
-        FIELD_MAP.put('D', ChronoField.DAY_OF_YEAR);               // SDF, LDML
-        FIELD_MAP.put('d', ChronoField.DAY_OF_MONTH);              // SDF, LDML
-        FIELD_MAP.put('F', ChronoField.ALIGNED_DAY_OF_WEEK_IN_MONTH);  // SDF, LDML
-        FIELD_MAP.put('E', ChronoField.DAY_OF_WEEK);               // SDF, LDML (different to both for 1/2 chars)
-        FIELD_MAP.put('c', ChronoField.DAY_OF_WEEK);               // LDML (stand-alone)
-        FIELD_MAP.put('e', ChronoField.DAY_OF_WEEK);               // LDML (needs localized week number)
-        FIELD_MAP.put('a', ChronoField.AMPM_OF_DAY);               // SDF, LDML
-        FIELD_MAP.put('H', ChronoField.HOUR_OF_DAY);               // SDF, LDML
-        FIELD_MAP.put('k', ChronoField.CLOCK_HOUR_OF_DAY);         // SDF, LDML
-        FIELD_MAP.put('K', ChronoField.HOUR_OF_AMPM);              // SDF, LDML
-        FIELD_MAP.put('h', ChronoField.CLOCK_HOUR_OF_AMPM);        // SDF, LDML
-        FIELD_MAP.put('m', ChronoField.MINUTE_OF_HOUR);            // SDF, LDML
-        FIELD_MAP.put('s', ChronoField.SECOND_OF_MINUTE);          // SDF, LDML
-        FIELD_MAP.put('S', ChronoField.NANO_OF_SECOND);            // LDML (SDF uses milli-of-second number)
-        FIELD_MAP.put('A', ChronoField.MILLI_OF_DAY);              // LDML
-        FIELD_MAP.put('n', ChronoField.NANO_OF_SECOND);            // 310 (proposed for LDML)
-        FIELD_MAP.put('N', ChronoField.NANO_OF_DAY);               // 310 (proposed for LDML)
-        FIELD_MAP.put('g', JulianFields.MODIFIED_JULIAN_DAY);
-        // 310 - z - time-zone names, matches LDML and SimpleDateFormat 1 to 4
-        // 310 - Z - matches SimpleDateFormat and LDML
-        // 310 - V - time-zone id, matches LDML
-        // 310 - v - general timezone names, not matching exactly with LDML because LDML specify to fall back
-        //           to 'VVVV' if general-nonlocation unavailable but here it's not falling back because of lack of data
-        // 310 - p - prefix for padding
-        // 310 - X - matches LDML, almost matches SDF for 1, exact match 2&3, extended 4&5
-        // 310 - x - matches LDML
-        // 310 - w, W, and Y are localized forms matching LDML
-        // LDML - B - day periods
-        // LDML - U - cycle year name, not supported by 310 yet
-        // LDML - l - deprecated
-        // LDML - j - not relevant
+        return switch (ch) {
+            case 'G' -> ChronoField.ERA;                       // SDF, LDML (different to both for 1/2 chars)
+            case 'y' -> ChronoField.YEAR_OF_ERA;               // SDF, LDML
+            case 'u' -> ChronoField.YEAR;                      // LDML (different in SDF)
+            case 'Q' -> IsoFields.QUARTER_OF_YEAR;             // LDML (removed quarter from 310)
+            case 'q' -> IsoFields.QUARTER_OF_YEAR;             // LDML (stand-alone)
+            case 'M' -> ChronoField.MONTH_OF_YEAR;             // SDF, LDML
+            case 'L' -> ChronoField.MONTH_OF_YEAR;             // SDF, LDML (stand-alone)
+            case 'D' -> ChronoField.DAY_OF_YEAR;               // SDF, LDML
+            case 'd' -> ChronoField.DAY_OF_MONTH;              // SDF, LDML
+            case 'F' -> ChronoField.ALIGNED_WEEK_OF_MONTH;     // SDF, LDML
+            case 'E' -> ChronoField.DAY_OF_WEEK;               // SDF, LDML (different to both for 1/2 chars)
+            case 'c' -> ChronoField.DAY_OF_WEEK;               // LDML (stand-alone)
+            case 'e' -> ChronoField.DAY_OF_WEEK;               // LDML (needs localized week number)
+            case 'a' -> ChronoField.AMPM_OF_DAY;               // SDF, LDML
+            case 'H' -> ChronoField.HOUR_OF_DAY;               // SDF, LDML
+            case 'k' -> ChronoField.CLOCK_HOUR_OF_DAY;         // SDF, LDML
+            case 'K' -> ChronoField.HOUR_OF_AMPM;              // SDF, LDML
+            case 'h' -> ChronoField.CLOCK_HOUR_OF_AMPM;        // SDF, LDML
+            case 'm' -> ChronoField.MINUTE_OF_HOUR;            // SDF, LDML
+            case 's' -> ChronoField.SECOND_OF_MINUTE;          // SDF, LDML
+            case 'S' -> ChronoField.NANO_OF_SECOND;            // LDML (SDF uses milli-of-second number)
+            case 'A' -> ChronoField.MILLI_OF_DAY;              // LDML
+            case 'n' -> ChronoField.NANO_OF_SECOND;            // 310 (proposed for LDML)
+            case 'N' -> ChronoField.NANO_OF_DAY;               // 310 (proposed for LDML)
+            case 'g' -> JulianFields.MODIFIED_JULIAN_DAY;
+            default -> null;
+            // 310 - z - time-zone names, matches LDML and SimpleDateFormat 1 to 4
+            // 310 - Z - matches SimpleDateFormat and LDML
+            // 310 - V - time-zone id, matches LDML
+            // 310 - v - general timezone names, not matching exactly with LDML because LDML specify to fall back
+            //           to 'VVVV' if general-nonlocation unavailable but here it's not falling back because of lack of data
+            // 310 - p - prefix for padding
+            // 310 - X - matches LDML, almost matches SDF for 1, exact match 2&3, extended 4&5
+            // 310 - x - matches LDML
+            // 310 - w, W, and Y are localized forms matching LDML
+            // LDML - B - day periods
+            // LDML - U - cycle year name, not supported by 310 yet
+            // LDML - l - deprecated
+            // LDML - j - not relevant
+        };
     }
 
     //-----------------------------------------------------------------------
@@ -2339,10 +2484,15 @@ public final class DateTimeFormatterBuilder {
          *
          * @param context  the context to format using, not null
          * @param buf  the buffer to append to, not null
+         * @param optional  whether the enclosing formatter is optional.
+         *                  If true and this formatter is nested in an optional formatter
+         *                  and the data is not available, then no error is returned and
+         *                  nothing is appended to the buffer. If false and the data is not available
+         *                  then an exception is thrown or false is returned as appropriate.
          * @return false if unable to query the value from the date-time, true otherwise
          * @throws DateTimeException if the date-time cannot be printed successfully
          */
-        boolean format(DateTimePrintContext context, StringBuilder buf);
+        boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional);
 
         /**
          * Parses text into date-time information.
@@ -2369,11 +2519,11 @@ public final class DateTimeFormatterBuilder {
         private final DateTimePrinterParser[] printerParsers;
         private final boolean optional;
 
-        CompositePrinterParser(List<DateTimePrinterParser> printerParsers, boolean optional) {
+        private CompositePrinterParser(List<DateTimePrinterParser> printerParsers, boolean optional) {
             this(printerParsers.toArray(new DateTimePrinterParser[0]), optional);
         }
 
-        CompositePrinterParser(DateTimePrinterParser[] printerParsers, boolean optional) {
+        private CompositePrinterParser(DateTimePrinterParser[] printerParsers, boolean optional) {
             this.printerParsers = printerParsers;
             this.optional = optional;
         }
@@ -2392,21 +2542,13 @@ public final class DateTimeFormatterBuilder {
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
             int length = buf.length();
-            if (optional) {
-                context.startOptional();
-            }
-            try {
-                for (DateTimePrinterParser pp : printerParsers) {
-                    if (pp.format(context, buf) == false) {
-                        buf.setLength(length);  // reset buffer
-                        return true;
-                    }
-                }
-            } finally {
-                if (optional) {
-                    context.endOptional();
+            boolean effectiveOptional = optional | this.optional;
+            for (DateTimePrinterParser pp : printerParsers) {
+                if (!pp.format(context, buf, effectiveOptional)) {
+                    buf.setLength(length);  // reset buffer
+                    return true;
                 }
             }
             return true;
@@ -2467,7 +2609,7 @@ public final class DateTimeFormatterBuilder {
          * @param padWidth  the width to pad to, 1 or greater
          * @param padChar  the pad character
          */
-        PadPrinterParserDecorator(DateTimePrinterParser printerParser, int padWidth, char padChar) {
+        private PadPrinterParserDecorator(DateTimePrinterParser printerParser, int padWidth, char padChar) {
             // input checked by DateTimeFormatterBuilder
             this.printerParser = printerParser;
             this.padWidth = padWidth;
@@ -2475,9 +2617,9 @@ public final class DateTimeFormatterBuilder {
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
             int preLen = buf.length();
-            if (printerParser.format(context, buf) == false) {
+            if (printerParser.format(context, buf, optional) == false) {
                 return false;
             }
             int len = buf.length() - preLen;
@@ -2485,9 +2627,15 @@ public final class DateTimeFormatterBuilder {
                 throw new DateTimeException(
                     "Cannot print as output of " + len + " characters exceeds pad width of " + padWidth);
             }
-            for (int i = 0; i < padWidth - len; i++) {
-                buf.insert(preLen, padChar);
+            var count = padWidth - len;
+            if (count == 0) {
+                return true;
             }
+            if (count == 1) {
+                buf.insert(preLen, padChar);
+                return true;
+            }
+            buf.insert(preLen, String.valueOf(padChar).repeat(count));
             return true;
         }
 
@@ -2538,7 +2686,7 @@ public final class DateTimeFormatterBuilder {
         LENIENT;
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
             return true;  // nothing to do here
         }
 
@@ -2575,12 +2723,12 @@ public final class DateTimeFormatterBuilder {
         private final TemporalField field;
         private final long value;
 
-        DefaultValueParser(TemporalField field, long value) {
+        private DefaultValueParser(TemporalField field, long value) {
             this.field = field;
             this.value = value;
         }
 
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
             return true;
         }
 
@@ -2598,13 +2746,15 @@ public final class DateTimeFormatterBuilder {
      */
     static final class CharLiteralPrinterParser implements DateTimePrinterParser {
         private final char literal;
+        private final boolean isSpaceSeparator;
 
-        CharLiteralPrinterParser(char literal) {
+        private CharLiteralPrinterParser(char literal) {
             this.literal = literal;
+            isSpaceSeparator = Character.getType(literal) == Character.SPACE_SEPARATOR;
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
             buf.append(literal);
             return true;
         }
@@ -2617,9 +2767,10 @@ public final class DateTimeFormatterBuilder {
             }
             char ch = text.charAt(position);
             if (ch != literal) {
-                if (context.isCaseSensitive() ||
+                if ((context.isCaseSensitive() ||
                         (Character.toUpperCase(ch) != Character.toUpperCase(literal) &&
-                         Character.toLowerCase(ch) != Character.toLowerCase(literal))) {
+                         Character.toLowerCase(ch) != Character.toLowerCase(literal))) &&
+                        !spaceEquals(context, ch)) {
                     return ~position;
                 }
             }
@@ -2633,6 +2784,12 @@ public final class DateTimeFormatterBuilder {
             }
             return "'" + literal + "'";
         }
+
+        private boolean spaceEquals(DateTimeParseContext context, char ch) {
+            return !context.isStrict() && isSpaceSeparator &&
+                    Character.getType(ch) == Character.SPACE_SEPARATOR;
+        }
+
     }
 
     //-----------------------------------------------------------------------
@@ -2642,12 +2799,12 @@ public final class DateTimeFormatterBuilder {
     static final class StringLiteralPrinterParser implements DateTimePrinterParser {
         private final String literal;
 
-        StringLiteralPrinterParser(String literal) {
+        private StringLiteralPrinterParser(String literal) {
             this.literal = literal;  // validated by caller
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
             buf.append(literal);
             return true;
         }
@@ -2708,7 +2865,7 @@ public final class DateTimeFormatterBuilder {
          * @param maxWidth  the maximum field width, from minWidth to 19
          * @param signStyle  the positive/negative sign style, not null
          */
-        NumberPrinterParser(TemporalField field, int minWidth, int maxWidth, SignStyle signStyle) {
+        private NumberPrinterParser(TemporalField field, int minWidth, int maxWidth, SignStyle signStyle) {
             // validated by caller
             this.field = field;
             this.minWidth = minWidth;
@@ -2759,25 +2916,28 @@ public final class DateTimeFormatterBuilder {
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
-            Long valueLong = context.getValue(field);
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
+            Long valueLong = context.getValue(field, optional);
             if (valueLong == null) {
                 return false;
             }
             long value = getValue(context, valueLong);
             DecimalStyle decimalStyle = context.getDecimalStyle();
-            String str = (value == Long.MIN_VALUE ? "9223372036854775808" : Long.toString(Math.abs(value)));
-            if (str.length() > maxWidth) {
+            int size = DecimalDigits.stringSize(value);
+            if (value < 0) {
+                size--;
+            }
+
+            if (size > maxWidth) {
                 throw new DateTimeException("Field " + field +
                     " cannot be printed as the value " + value +
                     " exceeds the maximum print width of " + maxWidth);
             }
-            str = decimalStyle.convertNumberToI18N(str);
 
             if (value >= 0) {
                 switch (signStyle) {
                     case EXCEEDS_PAD:
-                        if (minWidth < 19 && value >= EXCEED_POINTS[minWidth]) {
+                        if (minWidth < 19 && size > minWidth) {
                             buf.append(decimalStyle.getPositiveSign());
                         }
                         break;
@@ -2793,10 +2953,17 @@ public final class DateTimeFormatterBuilder {
                                              " cannot be negative according to the SignStyle");
                 }
             }
-            for (int i = 0; i < minWidth - str.length(); i++) {
-                buf.append(decimalStyle.getZeroDigit());
+            char zeroDigit = decimalStyle.getZeroDigit();
+            int zeros = minWidth - size;
+            if (zeros > 0) {
+                buf.repeat(zeroDigit, zeros);
             }
-            buf.append(str);
+            if (zeroDigit == '0' && value != Long.MIN_VALUE) {
+                buf.append(Math.abs(value));
+            } else {
+                String str = value == Long.MIN_VALUE ? "9223372036854775808" : Long.toString(Math.abs(value));
+                buf.append(decimalStyle.convertNumberToI18N(str));
+            }
             return true;
         }
 
@@ -2972,7 +3139,7 @@ public final class DateTimeFormatterBuilder {
          * @param baseValue  the base value
          * @param baseDate  the base date
          */
-        ReducedPrinterParser(TemporalField field, int minWidth, int maxWidth,
+        private ReducedPrinterParser(TemporalField field, int minWidth, int maxWidth,
                 int baseValue, ChronoLocalDate baseDate) {
             this(field, minWidth, maxWidth, baseValue, baseDate, 0);
             if (minWidth < 1 || minWidth > 10) {
@@ -3113,10 +3280,202 @@ public final class DateTimeFormatterBuilder {
 
     //-----------------------------------------------------------------------
     /**
+     * Prints and parses a NANO_OF_SECOND field with optional padding.
+     */
+    static final class NanosPrinterParser extends NumberPrinterParser {
+        private final boolean decimalPoint;
+
+        /**
+         * Constructor.
+         *
+         * @param minWidth  the minimum width to output, from 0 to 9
+         * @param maxWidth  the maximum width to output, from 0 to 9
+         * @param decimalPoint  whether to output the localized decimal point symbol
+         */
+        private NanosPrinterParser(int minWidth, int maxWidth, boolean decimalPoint) {
+            this(minWidth, maxWidth, decimalPoint, 0);
+            if (minWidth < 0 || minWidth > 9) {
+                throw new IllegalArgumentException("Minimum width must be from 0 to 9 inclusive but was " + minWidth);
+            }
+            if (maxWidth < 1 || maxWidth > 9) {
+                throw new IllegalArgumentException("Maximum width must be from 1 to 9 inclusive but was " + maxWidth);
+            }
+            if (maxWidth < minWidth) {
+                throw new IllegalArgumentException("Maximum width must exceed or equal the minimum width but " +
+                        maxWidth + " < " + minWidth);
+            }
+        }
+
+        /**
+         * Constructor.
+         *
+         * @param minWidth  the minimum width to output, from 0 to 9
+         * @param maxWidth  the maximum width to output, from 0 to 9
+         * @param decimalPoint  whether to output the localized decimal point symbol
+         * @param subsequentWidth the subsequentWidth for this instance
+         */
+        private NanosPrinterParser(int minWidth, int maxWidth, boolean decimalPoint, int subsequentWidth) {
+            super(NANO_OF_SECOND, minWidth, maxWidth, SignStyle.NOT_NEGATIVE, subsequentWidth);
+            this.decimalPoint = decimalPoint;
+        }
+
+        /**
+         * Returns a new instance with fixed width flag set.
+         *
+         * @return a new updated printer-parser, not null
+         */
+        @Override
+        NanosPrinterParser withFixedWidth() {
+            if (subsequentWidth == -1) {
+                return this;
+            }
+            return new NanosPrinterParser(minWidth, maxWidth, decimalPoint, -1);
+        }
+
+        /**
+         * Returns a new instance with an updated subsequent width.
+         *
+         * @param subsequentWidth  the width of subsequent non-negative numbers, 0 or greater
+         * @return a new updated printer-parser, not null
+         */
+        @Override
+        NanosPrinterParser withSubsequentWidth(int subsequentWidth) {
+            return new NanosPrinterParser(minWidth, maxWidth, decimalPoint, this.subsequentWidth + subsequentWidth);
+        }
+
+        /**
+         * For NanosPrinterParser, the width is fixed if context is strict,
+         * minWidth equal to maxWidth and decimalpoint is absent.
+         * @param context the context
+         * @return if the field is fixed width
+         * @see #appendFraction(java.time.temporal.TemporalField, int, int, boolean)
+         */
+        @Override
+        boolean isFixedWidth(DateTimeParseContext context) {
+            if (context.isStrict() && minWidth == maxWidth && decimalPoint == false) {
+                return true;
+            }
+            return false;
+        }
+
+        private static final int[] TENS = new int[] {
+            1,
+            10,
+            100,
+            1000,
+            10000,
+            100000,
+            1000000,
+            10000000,
+            100000000
+        };
+
+        @Override
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
+            Long value = context.getValue(field, optional);
+            if (value == null) {
+                return false;
+            }
+            int val = field.range().checkValidIntValue(value, field);
+            DecimalStyle decimalStyle = context.getDecimalStyle();
+            int stringSize = DecimalDigits.stringSize(val);
+            char zero = decimalStyle.getZeroDigit();
+            if (val == 0 || stringSize < 10 - maxWidth) {
+                // 0 or would round down to 0
+                // to get output identical to FractionPrinterParser use minWidth if the
+                // value is zero, maxWidth otherwise
+                int width = val == 0 ? minWidth : maxWidth;
+                if (width > 0) {
+                    if (decimalPoint) {
+                        buf.append(decimalStyle.getDecimalSeparator());
+                    }
+                    buf.repeat(zero, width);
+                }
+            } else {
+                if (decimalPoint) {
+                    buf.append(decimalStyle.getDecimalSeparator());
+                }
+                // add leading zeros
+                int zeros = 9 - stringSize;
+                if (zeros > 0) {
+                    buf.repeat(zero, zeros);
+                }
+                // truncate unwanted digits
+                if (maxWidth < 9) {
+                    val /= TENS[9 - maxWidth];
+                }
+                // truncate zeros
+                for (int i = maxWidth; i > minWidth; i--) {
+                    if ((val % 10) != 0) {
+                        break;
+                    }
+                    val /= 10;
+                }
+                if (zero == '0') {
+                    buf.append(val);
+                } else {
+                    buf.append(decimalStyle.convertNumberToI18N(Integer.toString(val)));
+                }
+            }
+            return true;
+        }
+
+        @Override
+        public int parse(DateTimeParseContext context, CharSequence text, int position) {
+            int effectiveMin = (context.isStrict() || isFixedWidth(context) ? minWidth : 0);
+            int effectiveMax = (context.isStrict() || isFixedWidth(context) ? maxWidth : 9);
+            int length = text.length();
+            if (position == length) {
+                // valid if whole field is optional, invalid if minimum width
+                return (effectiveMin > 0 ? ~position : position);
+            }
+            if (decimalPoint) {
+                if (text.charAt(position) != context.getDecimalStyle().getDecimalSeparator()) {
+                    // valid if whole field is optional, invalid if minimum width
+                    return (effectiveMin > 0 ? ~position : position);
+                }
+                position++;
+            }
+            int minEndPos = position + effectiveMin;
+            if (minEndPos > length) {
+                return ~position;  // need at least min width digits
+            }
+            int maxEndPos = Math.min(position + effectiveMax, length);
+            int total = 0;  // can use int because we are only parsing up to 9 digits
+            int pos = position;
+            while (pos < maxEndPos) {
+                char ch = text.charAt(pos);
+                int digit = context.getDecimalStyle().convertToDigit(ch);
+                if (digit < 0) {
+                    if (pos < minEndPos) {
+                        return ~position;  // need at least min width digits
+                    }
+                    break;
+                }
+                pos++;
+                total = total * 10 + digit;
+            }
+            for (int i = 9 - (pos - position); i > 0; i--) {
+                total *= 10;
+            }
+            return context.setParsedField(field, total, position, pos);
+        }
+
+        @Override
+        public String toString() {
+            String decimal = (decimalPoint ? ",DecimalPoint" : "");
+            return "Fraction(" + field + "," + minWidth + "," + maxWidth + decimal + ")";
+        }
+    }
+
+    //-----------------------------------------------------------------------
+    /**
      * Prints and parses a numeric date-time field with optional padding.
      */
     static final class FractionPrinterParser extends NumberPrinterParser {
         private final boolean decimalPoint;
+        private final BigDecimal minBD;
+        private final BigDecimal rangeBD;
 
         /**
          * Constructor.
@@ -3126,7 +3485,7 @@ public final class DateTimeFormatterBuilder {
          * @param maxWidth  the maximum width to output, from 0 to 9
          * @param decimalPoint  whether to output the localized decimal point symbol
          */
-        FractionPrinterParser(TemporalField field, int minWidth, int maxWidth, boolean decimalPoint) {
+        private FractionPrinterParser(TemporalField field, int minWidth, int maxWidth, boolean decimalPoint) {
             this(field, minWidth, maxWidth, decimalPoint, 0);
             Objects.requireNonNull(field, "field");
             if (field.range().isFixed() == false) {
@@ -3153,9 +3512,12 @@ public final class DateTimeFormatterBuilder {
          * @param decimalPoint  whether to output the localized decimal point symbol
          * @param subsequentWidth the subsequentWidth for this instance
          */
-        FractionPrinterParser(TemporalField field, int minWidth, int maxWidth, boolean decimalPoint, int subsequentWidth) {
+        private FractionPrinterParser(TemporalField field, int minWidth, int maxWidth, boolean decimalPoint, int subsequentWidth) {
             super(field, minWidth, maxWidth, SignStyle.NOT_NEGATIVE, subsequentWidth);
             this.decimalPoint = decimalPoint;
+            ValueRange range = field.range();
+            this.minBD = BigDecimal.valueOf(range.getMinimum());
+            this.rangeBD = BigDecimal.valueOf(range.getMaximum()).subtract(minBD).add(BigDecimal.ONE);
         }
 
         /**
@@ -3198,8 +3560,8 @@ public final class DateTimeFormatterBuilder {
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
-            Long value = context.getValue(field);
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
+            Long value = context.getValue(field, optional);
             if (value == null) {
                 return false;
             }
@@ -3210,19 +3572,17 @@ public final class DateTimeFormatterBuilder {
                     if (decimalPoint) {
                         buf.append(decimalStyle.getDecimalSeparator());
                     }
-                    for (int i = 0; i < minWidth; i++) {
-                        buf.append(decimalStyle.getZeroDigit());
-                    }
+                    buf.repeat(decimalStyle.getZeroDigit(), minWidth);
                 }
             } else {
-                int outputScale = Math.min(Math.max(fraction.scale(), minWidth), maxWidth);
+                int outputScale = Math.clamp(fraction.scale(), minWidth, maxWidth);
                 fraction = fraction.setScale(outputScale, RoundingMode.FLOOR);
-                String str = fraction.toPlainString().substring(2);
-                str = decimalStyle.convertNumberToI18N(str);
                 if (decimalPoint) {
                     buf.append(decimalStyle.getDecimalSeparator());
                 }
-                buf.append(str);
+                String str = fraction.toPlainString();
+                str = decimalStyle.convertNumberToI18N(str);
+                buf.append(str, 2, str.length());
             }
             return true;
         }
@@ -3284,10 +3644,7 @@ public final class DateTimeFormatterBuilder {
          * @throws DateTimeException if the value cannot be converted to a fraction
          */
         private BigDecimal convertToFraction(long value) {
-            ValueRange range = field.range();
-            range.checkValidValue(value, field);
-            BigDecimal minBD = BigDecimal.valueOf(range.getMinimum());
-            BigDecimal rangeBD = BigDecimal.valueOf(range.getMaximum()).subtract(minBD).add(BigDecimal.ONE);
+            field.range().checkValidValue(value, field);
             BigDecimal valueBD = BigDecimal.valueOf(value).subtract(minBD);
             BigDecimal fraction = valueBD.divide(rangeBD, 9, RoundingMode.FLOOR);
             // stripTrailingZeros bug
@@ -3311,9 +3668,6 @@ public final class DateTimeFormatterBuilder {
          * @throws DateTimeException if the value cannot be converted
          */
         private long convertFromFraction(BigDecimal fraction) {
-            ValueRange range = field.range();
-            BigDecimal minBD = BigDecimal.valueOf(range.getMinimum());
-            BigDecimal rangeBD = BigDecimal.valueOf(range.getMaximum()).subtract(minBD).add(BigDecimal.ONE);
             BigDecimal valueBD = fraction.multiply(rangeBD).setScale(0, RoundingMode.FLOOR).add(minBD);
             return valueBD.longValueExact();
         }
@@ -3346,7 +3700,7 @@ public final class DateTimeFormatterBuilder {
          * @param textStyle  the text style, not null
          * @param provider  the text provider, not null
          */
-        TextPrinterParser(TemporalField field, TextStyle textStyle, DateTimeTextProvider provider) {
+        private TextPrinterParser(TemporalField field, TextStyle textStyle, DateTimeTextProvider provider) {
             // validated by caller
             this.field = field;
             this.textStyle = textStyle;
@@ -3354,8 +3708,8 @@ public final class DateTimeFormatterBuilder {
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
-            Long value = context.getValue(field);
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
+            Long value = context.getValue(field, optional);
             if (value == null) {
                 return false;
             }
@@ -3367,7 +3721,7 @@ public final class DateTimeFormatterBuilder {
                 text = provider.getText(chrono, field, value, textStyle, context.getLocale());
             }
             if (text == null) {
-                return numberPrinterParser().format(context, buf);
+                return numberPrinterParser().format(context, buf, optional);
             }
             buf.append(text);
             return true;
@@ -3444,14 +3798,14 @@ public final class DateTimeFormatterBuilder {
         private static final long SECONDS_0000_TO_1970 = ((146097L * 5L) - (30L * 365L + 7L)) * 86400L;
         private final int fractionalDigits;
 
-        InstantPrinterParser(int fractionalDigits) {
+        private InstantPrinterParser(int fractionalDigits) {
             this.fractionalDigits = fractionalDigits;
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
             // use INSTANT_SECONDS, thus this code is not bound by Instant.MAX
-            Long inSecs = context.getValue(INSTANT_SECONDS);
+            Long inSecs = context.getValue(INSTANT_SECONDS, optional);
             Long inNanos = null;
             if (context.getTemporal().isSupported(NANO_OF_SECOND)) {
                 inNanos = context.getTemporal().getLong(NANO_OF_SECOND);
@@ -3461,56 +3815,71 @@ public final class DateTimeFormatterBuilder {
             }
             long inSec = inSecs;
             int inNano = NANO_OF_SECOND.checkValidIntValue(inNanos != null ? inNanos : 0);
-            // format mostly using LocalDateTime.toString
+            if (fractionalDigits == 0) {
+                inNano = 0;
+            }
+            boolean printNanoInLocalDateTime = fractionalDigits == -2
+                    || (inNano == 0 && (fractionalDigits == 0 || fractionalDigits == -1));
             if (inSec >= -SECONDS_0000_TO_1970) {
-                // current era
-                long zeroSecs = inSec - SECONDS_PER_10000_YEARS + SECONDS_0000_TO_1970;
-                long hi = Math.floorDiv(zeroSecs, SECONDS_PER_10000_YEARS) + 1;
-                long lo = Math.floorMod(zeroSecs, SECONDS_PER_10000_YEARS);
-                LocalDateTime ldt = LocalDateTime.ofEpochSecond(lo - SECONDS_0000_TO_1970, 0, ZoneOffset.UTC);
-                if (hi > 0) {
-                    buf.append('+').append(hi);
-                }
-                buf.append(ldt);
-                if (ldt.getSecond() == 0) {
-                    buf.append(":00");
-                }
+                currentEra(buf, inSec, printNanoInLocalDateTime ? inNano : 0);
             } else {
-                // before current era
-                long zeroSecs = inSec + SECONDS_0000_TO_1970;
-                long hi = zeroSecs / SECONDS_PER_10000_YEARS;
-                long lo = zeroSecs % SECONDS_PER_10000_YEARS;
-                LocalDateTime ldt = LocalDateTime.ofEpochSecond(lo - SECONDS_0000_TO_1970, 0, ZoneOffset.UTC);
-                int pos = buf.length();
-                buf.append(ldt);
-                if (ldt.getSecond() == 0) {
-                    buf.append(":00");
-                }
-                if (hi < 0) {
-                    if (ldt.getYear() == -10_000) {
-                        buf.replace(pos, pos + 2, Long.toString(hi - 1));
-                    } else if (lo == 0) {
-                        buf.insert(pos, hi);
-                    } else {
-                        buf.insert(pos + 1, Math.abs(hi));
-                    }
-                }
+                beforeCurrentEra(buf, inSec, printNanoInLocalDateTime ? inNano : 0);
             }
             // add fraction
-            if ((fractionalDigits < 0 && inNano > 0) || fractionalDigits > 0) {
-                buf.append('.');
-                int div = 100_000_000;
-                for (int i = 0; ((fractionalDigits == -1 && inNano > 0) ||
-                                    (fractionalDigits == -2 && (inNano > 0 || (i % 3) != 0)) ||
-                                    i < fractionalDigits); i++) {
-                    int digit = inNano / div;
-                    buf.append((char) (digit + '0'));
-                    inNano = inNano - (digit * div);
-                    div = div / 10;
-                }
+            if (!printNanoInLocalDateTime) {
+                printNano(buf, inSec, inNano);
             }
             buf.append('Z');
             return true;
+        }
+
+        private void printNano(StringBuilder buf, long inSec, int inNano) {
+            buf.append('.');
+            int div = 100_000_000;
+            int fractionalDigits = this.fractionalDigits;
+            for (int i = 0; ((fractionalDigits == -1 && inNano > 0) ||
+                    (fractionalDigits == -2 && (inNano > 0 || (i % 3) != 0)) ||
+                    i < fractionalDigits); i++) {
+                int digit = inNano / div;
+                buf.append((char) (digit + '0'));
+                inNano = inNano - (digit * div);
+                div = div / 10;
+            }
+        }
+
+        private static void currentEra(StringBuilder buf, long inSec, int inNano) {
+            long zeroSecs = inSec - SECONDS_PER_10000_YEARS + SECONDS_0000_TO_1970;
+            long hi = Math.floorDiv(zeroSecs, SECONDS_PER_10000_YEARS) + 1;
+            long lo = Math.floorMod(zeroSecs, SECONDS_PER_10000_YEARS);
+            LocalDateTime ldt = LocalDateTime.ofEpochSecond(lo - SECONDS_0000_TO_1970, inNano, ZoneOffset.UTC);
+            if (hi > 0) {
+                buf.append('+').append(hi);
+            }
+            DateTimeHelper.formatTo(buf, ldt);
+            if (ldt.getSecond() == 0 && inNano == 0) {
+                buf.append(":00");
+            }
+        }
+
+        private static void beforeCurrentEra(StringBuilder buf, long inSec, int inNano) {
+            long zeroSecs = inSec + SECONDS_0000_TO_1970;
+            long hi = zeroSecs / SECONDS_PER_10000_YEARS;
+            long lo = zeroSecs % SECONDS_PER_10000_YEARS;
+            LocalDateTime ldt = LocalDateTime.ofEpochSecond(lo - SECONDS_0000_TO_1970, inNano, ZoneOffset.UTC);
+            int pos = buf.length();
+            DateTimeHelper.formatTo(buf, ldt);
+            if (ldt.getSecond() == 0 && inNano == 0) {
+                buf.append(":00");
+            }
+            if (hi < 0) {
+                if (ldt.getYear() == -10_000) {
+                    buf.replace(pos, pos + 2, Long.toString(hi - 1));
+                } else if (lo == 0) {
+                    buf.insert(pos, hi);
+                } else {
+                    buf.insert(pos + 1, Math.abs(hi));
+                }
+            }
         }
 
         @Override
@@ -3524,7 +3893,8 @@ public final class DateTimeFormatterBuilder {
                     .appendValue(MINUTE_OF_HOUR, 2).appendLiteral(':')
                     .appendValue(SECOND_OF_MINUTE, 2)
                     .appendFraction(NANO_OF_SECOND, minDigits, maxDigits, true)
-                    .appendOffsetId()
+                    .parseLenient()
+                    .appendOffset("+HH", "Z")
                     .toFormatter().toPrinterParser(false);
             DateTimeParseContext newContext = context.copy();
             int pos = parser.parse(newContext, text, position);
@@ -3593,7 +3963,7 @@ public final class DateTimeFormatterBuilder {
          * @param pattern  the pattern
          * @param noOffsetText  the text to use for UTC, not null
          */
-        OffsetIdPrinterParser(String pattern, String noOffsetText) {
+        private OffsetIdPrinterParser(String pattern, String noOffsetText) {
             Objects.requireNonNull(pattern, "pattern");
             Objects.requireNonNull(noOffsetText, "noOffsetText");
             this.type = checkPattern(pattern);
@@ -3619,8 +3989,8 @@ public final class DateTimeFormatterBuilder {
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
-            Long offsetSecs = context.getValue(OFFSET_SECONDS);
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
+            Long offsetSecs = context.getValue(OFFSET_SECONDS, optional);
             if (offsetSecs == null) {
                 return false;
             }
@@ -3918,8 +4288,8 @@ public final class DateTimeFormatterBuilder {
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
-            Long offsetSecs = context.getValue(OFFSET_SECONDS);
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
+            Long offsetSecs = context.getValue(OFFSET_SECONDS, optional);
             if (offsetSecs == null) {
                 return false;
             }
@@ -4075,7 +4445,7 @@ public final class DateTimeFormatterBuilder {
 
         /**  Display in generic time-zone format. True in case of pattern letter 'v' */
         private final boolean isGeneric;
-        ZoneTextPrinterParser(TextStyle textStyle, Set<ZoneId> preferredZones, boolean isGeneric) {
+        private ZoneTextPrinterParser(TextStyle textStyle, Set<ZoneId> preferredZones, boolean isGeneric) {
             super(TemporalQueries.zone(), "ZoneText(" + textStyle + ")");
             this.textStyle = Objects.requireNonNull(textStyle, "textStyle");
             this.isGeneric = isGeneric;
@@ -4087,9 +4457,10 @@ public final class DateTimeFormatterBuilder {
             }
         }
 
-        private static final int STD = 0;
-        private static final int DST = 1;
-        private static final int GENERIC = 2;
+        static final int UNDEFINED = -1;
+        static final int STD = 0;
+        static final int DST = 1;
+        static final int GENERIC = 2;
         private static final Map<String, SoftReference<Map<Locale, String[]>>> cache =
             new ConcurrentHashMap<>();
 
@@ -4131,8 +4502,8 @@ public final class DateTimeFormatterBuilder {
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
-            ZoneId zone = context.getValue(TemporalQueries.zoneId());
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
+            ZoneId zone = context.getValue(TemporalQueries.zoneId(), optional);
             if (zone == null) {
                 return false;
             }
@@ -4141,7 +4512,11 @@ public final class DateTimeFormatterBuilder {
                 TemporalAccessor dt = context.getTemporal();
                 int type = GENERIC;
                 if (!isGeneric) {
-                    if (dt.isSupported(ChronoField.INSTANT_SECONDS)) {
+                    // Check if an explicit metazone DST offset exists
+                    String dstOffset = TimeZoneNameUtility.explicitDstOffset(zname);
+                    if (dt.isSupported(OFFSET_SECONDS) && dstOffset != null) {
+                        type = ZoneOffset.from(dt).equals(ZoneOffset.of(dstOffset)) ? DST : STD;
+                    } else if (dt.isSupported(ChronoField.INSTANT_SECONDS)) {
                         type = zone.getRules().isDaylightSavings(Instant.from(dt)) ? DST : STD;
                     } else if (dt.isSupported(ChronoField.EPOCH_DAY) &&
                                dt.isSupported(ChronoField.NANO_OF_DAY)) {
@@ -4164,9 +4539,9 @@ public final class DateTimeFormatterBuilder {
 
         // cache per instance for now
         private final Map<Locale, Entry<Integer, SoftReference<PrefixTree>>>
-            cachedTree = new HashMap<>();
+            cachedTree = HashMap.newHashMap(1);
         private final Map<Locale, Entry<Integer, SoftReference<PrefixTree>>>
-            cachedTreeCI = new HashMap<>();
+            cachedTreeCI = HashMap.newHashMap(1);
 
         @Override
         protected PrefixTree getTree(DateTimeParseContext context) {
@@ -4175,9 +4550,8 @@ public final class DateTimeFormatterBuilder {
             }
             Locale locale = context.getLocale();
             boolean isCaseSensitive = context.isCaseSensitive();
-            Set<String> regionIds = new HashSet<>(ZoneRulesProvider.getAvailableZoneIds());
-            Set<String> nonRegionIds = new HashSet<>(64);
-            int regionIdsSize = regionIds.size();
+            Set<String> availableZoneIds = ZoneRulesProvider.getAvailableZoneIds();
+            int regionIdsSize = availableZoneIds.size();
 
             Map<Locale, Entry<Integer, SoftReference<PrefixTree>>> cached =
                 isCaseSensitive ? cachedTree : cachedTreeCI;
@@ -4190,17 +4564,19 @@ public final class DateTimeFormatterBuilder {
                 (tree = entry.getValue().get()) == null)) {
                 tree = PrefixTree.newTree(context);
                 zoneStrings = TimeZoneNameUtility.getZoneStrings(locale);
+                Set<String> nonRegionIds = HashSet.newHashSet(64);
+                Set<String> regionIds = new HashSet<>(availableZoneIds);
                 for (String[] names : zoneStrings) {
                     String zid = names[0];
                     if (!regionIds.remove(zid)) {
                         nonRegionIds.add(zid);
                         continue;
                     }
-                    tree.add(zid, zid);    // don't convert zid -> metazone
+                    tree.add(zid, zid, UNDEFINED);    // don't convert zid -> metazone
                     zid = ZoneName.toZid(zid, locale);
                     int i = textStyle == TextStyle.FULL ? 1 : 2;
                     for (; i < names.length; i += 2) {
-                        tree.add(names[i], zid);
+                        tree.add(names[i], zid, (i - 1) / 2);
                     }
                 }
 
@@ -4213,7 +4589,7 @@ public final class DateTimeFormatterBuilder {
                         int i = textStyle == TextStyle.FULL ? 1 : 2;
                         for (; i < cidNames.length; i += 2) {
                             if (cidNames[i] != null && !cidNames[i].isEmpty()) {
-                                t.add(cidNames[i], cid);
+                                t.add(cidNames[i], cid, (i - 1) / 2);
                             }
                         }
                     });
@@ -4228,7 +4604,7 @@ public final class DateTimeFormatterBuilder {
                         }
                         int i = textStyle == TextStyle.FULL ? 1 : 2;
                         for (; i < names.length; i += 2) {
-                            tree.add(names[i], zid);
+                            tree.add(names[i], zid, (i - 1) / 2);
                        }
                     }
                 }
@@ -4246,14 +4622,14 @@ public final class DateTimeFormatterBuilder {
         private final TemporalQuery<ZoneId> query;
         private final String description;
 
-        ZoneIdPrinterParser(TemporalQuery<ZoneId> query, String description) {
+        private ZoneIdPrinterParser(TemporalQuery<ZoneId> query, String description) {
             this.query = query;
             this.description = description;
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
-            ZoneId zone = context.getValue(query);
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
+            ZoneId zone = context.getValue(query, optional);
             if (zone == null) {
                 return false;
             }
@@ -4314,8 +4690,14 @@ public final class DateTimeFormatterBuilder {
                     if (length >= position + 3 && context.charEquals(text.charAt(position + 2), 'C')) {
                         // There are localized zone texts that start with "UTC", e.g.
                         // "UTC\u221210:00" (MINUS SIGN instead of HYPHEN-MINUS) in French.
-                        // Exclude those ZoneText cases.
-                        if (!(this instanceof ZoneTextPrinterParser)) {
+                        // Treat them as normal '-' with the offset parser (using text parser would
+                        // be problematic due to std/dst distinction)
+                        if (length > position + 3 && context.charEquals(text.charAt(position + 3), '\u2212')) {
+                            var tmpText = "%s-%s".formatted(
+                                    text.subSequence(0, position + 3),
+                                    text.subSequence(position + 4, text.length()));
+                            return parseOffsetBased(context, tmpText, position, position + 3, OffsetIdPrinterParser.INSTANCE_ID_ZERO);
+                        } else {
                             return parseOffsetBased(context, text, position, position + 3, OffsetIdPrinterParser.INSTANCE_ID_ZERO);
                         }
                     } else {
@@ -4334,15 +4716,16 @@ public final class DateTimeFormatterBuilder {
             // parse
             PrefixTree tree = getTree(context);
             ParsePosition ppos = new ParsePosition(position);
-            String parsedZoneId = tree.match(text, ppos);
-            if (parsedZoneId == null) {
+            PrefixTree parsedZoneId = tree.match(text, ppos);
+            if (parsedZoneId.value == null) {
                 if (context.charEquals(nextChar, 'Z')) {
                     context.setParsed(ZoneOffset.UTC);
                     return position + 1;
                 }
                 return ~position;
             }
-            context.setParsed(ZoneId.of(parsedZoneId));
+            context.setParsed(ZoneId.of(parsedZoneId.value));
+            context.setParsedZoneNameType(parsedZoneId.type);
             return ppos.getIndex();
         }
 
@@ -4359,7 +4742,7 @@ public final class DateTimeFormatterBuilder {
          * @return the position after the parse
          */
         private int parseOffsetBased(DateTimeParseContext context, CharSequence text, int prefixPos, int position, OffsetIdPrinterParser parser) {
-            String prefix = text.subSequence(prefixPos, position).toString().toUpperCase();
+            String prefix = text.subSequence(prefixPos, position).toString().toUpperCase(Locale.ROOT);
             if (position >= text.length()) {
                 context.setParsed(ZoneId.of(prefix));
                 return position;
@@ -4404,14 +4787,16 @@ public final class DateTimeFormatterBuilder {
     static class PrefixTree {
         protected String key;
         protected String value;
+        protected int type;
         protected char c0;    // performance optimization to avoid the
                               // boundary check cost of key.charat(0)
         protected PrefixTree child;
         protected PrefixTree sibling;
 
-        private PrefixTree(String k, String v, PrefixTree child) {
+        private PrefixTree(String k, String v, int type, PrefixTree child) {
             this.key = k;
             this.value = v;
+            this.type = type;
             this.child = child;
             if (k.isEmpty()) {
                 c0 = 0xffff;
@@ -4427,13 +4812,10 @@ public final class DateTimeFormatterBuilder {
          * @return the tree, not null
          */
         public static PrefixTree newTree(DateTimeParseContext context) {
-            //if (!context.isStrict()) {
-            //    return new LENIENT("", null, null);
-            //}
             if (context.isCaseSensitive()) {
-                return new PrefixTree("", null, null);
+                return new PrefixTree("", null, ZoneTextPrinterParser.UNDEFINED, null);
             }
-            return new CI("", null, null);
+            return new CI("", null, ZoneTextPrinterParser.UNDEFINED, null);
         }
 
         /**
@@ -4446,7 +4828,7 @@ public final class DateTimeFormatterBuilder {
         public static  PrefixTree newTree(Set<String> keys, DateTimeParseContext context) {
             PrefixTree tree = newTree(context);
             for (String k : keys) {
-                tree.add0(k, k);
+                tree.add0(k, k, ZoneTextPrinterParser.UNDEFINED);
             }
             return tree;
         }
@@ -4455,7 +4837,7 @@ public final class DateTimeFormatterBuilder {
          * Clone a copy of this tree
          */
         public PrefixTree copyTree() {
-            PrefixTree copy = new PrefixTree(key, value, null);
+            PrefixTree copy = new PrefixTree(key, value, type, null);
             if (child != null) {
                 copy.child = child.copyTree();
             }
@@ -4473,11 +4855,11 @@ public final class DateTimeFormatterBuilder {
          * @param v  the value, not null
          * @return  true if the pair is added successfully
          */
-        public boolean add(String k, String v) {
-            return add0(k, v);
+        public boolean add(String k, String v, int t) {
+            return add0(k, v, t);
         }
 
-        private boolean add0(String k, String v) {
+        private boolean add0(String k, String v, int t) {
             k = toKey(k);
             int prefixLen = prefixLength(k);
             if (prefixLen == key.length()) {
@@ -4486,12 +4868,12 @@ public final class DateTimeFormatterBuilder {
                     PrefixTree c = child;
                     while (c != null) {
                         if (isEqual(c.c0, subKey.charAt(0))) {
-                            return c.add0(subKey, v);
+                            return c.add0(subKey, v, t);
                         }
                         c = c.sibling;
                     }
                     // add the node as the child of the current node
-                    c = newNode(subKey, v, null);
+                    c = newNode(subKey, v, t, null);
                     c.sibling = child;
                     child = c;
                     return true;
@@ -4501,18 +4883,20 @@ public final class DateTimeFormatterBuilder {
                 //    return false;
                 //}
                 value = v;
+                type = t;
                 return true;
             }
             // split the existing node
-            PrefixTree n1 = newNode(key.substring(prefixLen), value, child);
+            PrefixTree n1 = newNode(key.substring(prefixLen), value, type, child);
             key = k.substring(0, prefixLen);
             child = n1;
             if (prefixLen < k.length()) {
-                PrefixTree n2 = newNode(k.substring(prefixLen), v, null);
+                PrefixTree n2 = newNode(k.substring(prefixLen), v, t, null);
                 child.sibling = n2;
                 value = null;
             } else {
                 value = v;
+                type = t;
             }
             return true;
         }
@@ -4523,9 +4907,9 @@ public final class DateTimeFormatterBuilder {
          * @param text  the input text to parse, not null
          * @param off  the offset position to start parsing at
          * @param end  the end position to stop parsing
-         * @return the resulting string, or null if no match found.
+         * @return the resulting tree, or null if no match found.
          */
-        public String match(CharSequence text, int off, int end) {
+        public PrefixTree match(CharSequence text, int off, int end) {
             if (!prefixOf(text, off, end)){
                 return null;
             }
@@ -4533,16 +4917,16 @@ public final class DateTimeFormatterBuilder {
                 PrefixTree c = child;
                 do {
                     if (isEqual(c.c0, text.charAt(off))) {
-                        String found = c.match(text, off, end);
+                        PrefixTree found = c.match(text, off, end);
                         if (found != null) {
                             return found;
                         }
-                        return value;
+                        return this;
                     }
                     c = c.sibling;
                 } while (c != null);
             }
-            return value;
+            return this;
         }
 
         /**
@@ -4552,9 +4936,9 @@ public final class DateTimeFormatterBuilder {
          * @param pos  the position to start parsing at, from 0 to the text
          *  length. Upon return, position will be updated to the new parse
          *  position, or unchanged, if no match found.
-         * @return the resulting string, or null if no match found.
+         * @return the resulting tree, or null if no match found.
          */
-        public String match(CharSequence text, ParsePosition pos) {
+        public PrefixTree match(CharSequence text, ParsePosition pos) {
             int off = pos.getIndex();
             int end = text.length();
             if (!prefixOf(text, off, end)){
@@ -4566,7 +4950,7 @@ public final class DateTimeFormatterBuilder {
                 do {
                     if (isEqual(c.c0, text.charAt(off))) {
                         pos.setIndex(off);
-                        String found = c.match(text, pos);
+                        PrefixTree found = c.match(text, pos);
                         if (found != null) {
                             return found;
                         }
@@ -4576,15 +4960,15 @@ public final class DateTimeFormatterBuilder {
                 } while (c != null);
             }
             pos.setIndex(off);
-            return value;
+            return this;
         }
 
         protected String toKey(String k) {
             return k;
         }
 
-        protected PrefixTree newNode(String k, String v, PrefixTree child) {
-            return new PrefixTree(k, v, child);
+        protected PrefixTree newNode(String k, String v, int t, PrefixTree child) {
+            return new PrefixTree(k, v, t, child);
         }
 
         protected boolean isEqual(char c1, char c2) {
@@ -4624,13 +5008,13 @@ public final class DateTimeFormatterBuilder {
          */
         private static class CI extends PrefixTree {
 
-            private CI(String k, String v, PrefixTree child) {
-                super(k, v, child);
+            private CI(String k, String v, int t, PrefixTree child) {
+                super(k, v, t, child);
             }
 
             @Override
-            protected CI newNode(String k, String v, PrefixTree child) {
-                return new CI(k, v, child);
+            protected CI newNode(String k, String v, int t, PrefixTree child) {
+                return new CI(k, v, t, child);
             }
 
             @Override
@@ -4653,86 +5037,6 @@ public final class DateTimeFormatterBuilder {
                 return true;
             }
         }
-
-        /**
-         * Lenient prefix tree. Case insensitive and ignores characters
-         * like space, underscore and slash.
-         */
-        private static class LENIENT extends CI {
-
-            private LENIENT(String k, String v, PrefixTree child) {
-                super(k, v, child);
-            }
-
-            @Override
-            protected CI newNode(String k, String v, PrefixTree child) {
-                return new LENIENT(k, v, child);
-            }
-
-            private boolean isLenientChar(char c) {
-                return c == ' ' || c == '_' || c == '/';
-            }
-
-            protected String toKey(String k) {
-                for (int i = 0; i < k.length(); i++) {
-                    if (isLenientChar(k.charAt(i))) {
-                        StringBuilder sb = new StringBuilder(k.length());
-                        sb.append(k, 0, i);
-                        i++;
-                        while (i < k.length()) {
-                            if (!isLenientChar(k.charAt(i))) {
-                                sb.append(k.charAt(i));
-                            }
-                            i++;
-                        }
-                        return sb.toString();
-                    }
-                }
-                return k;
-            }
-
-            @Override
-            public String match(CharSequence text, ParsePosition pos) {
-                int off = pos.getIndex();
-                int end = text.length();
-                int len = key.length();
-                int koff = 0;
-                while (koff < len && off < end) {
-                    if (isLenientChar(text.charAt(off))) {
-                        off++;
-                        continue;
-                    }
-                    if (!isEqual(key.charAt(koff++), text.charAt(off++))) {
-                        return null;
-                    }
-                }
-                if (koff != len) {
-                    return null;
-                }
-                if (child != null && off != end) {
-                    int off0 = off;
-                    while (off0 < end && isLenientChar(text.charAt(off0))) {
-                        off0++;
-                    }
-                    if (off0 < end) {
-                        PrefixTree c = child;
-                        do {
-                            if (isEqual(c.c0, text.charAt(off0))) {
-                                pos.setIndex(off0);
-                                String found = c.match(text, pos);
-                                if (found != null) {
-                                    return found;
-                                }
-                                break;
-                            }
-                            c = c.sibling;
-                        } while (c != null);
-                    }
-                }
-                pos.setIndex(off);
-                return value;
-            }
-        }
     }
 
     //-----------------------------------------------------------------------
@@ -4743,14 +5047,14 @@ public final class DateTimeFormatterBuilder {
         /** The text style to output, null means the ID. */
         private final TextStyle textStyle;
 
-        ChronoPrinterParser(TextStyle textStyle) {
+        private ChronoPrinterParser(TextStyle textStyle) {
             // validated by caller
             this.textStyle = textStyle;
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
-            Chronology chrono = context.getValue(TemporalQueries.chronology());
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
+            Chronology chrono = context.getValue(TemporalQueries.chronology(), optional);
             if (chrono == null) {
                 return false;
             }
@@ -4818,6 +5122,7 @@ public final class DateTimeFormatterBuilder {
 
         private final FormatStyle dateStyle;
         private final FormatStyle timeStyle;
+        private final String requestedTemplate;
 
         /**
          * Constructor.
@@ -4825,16 +5130,29 @@ public final class DateTimeFormatterBuilder {
          * @param dateStyle  the date style to use, may be null
          * @param timeStyle  the time style to use, may be null
          */
-        LocalizedPrinterParser(FormatStyle dateStyle, FormatStyle timeStyle) {
-            // validated by caller
+        private LocalizedPrinterParser(FormatStyle dateStyle, FormatStyle timeStyle) {
+            // params validated by caller
             this.dateStyle = dateStyle;
             this.timeStyle = timeStyle;
+            this.requestedTemplate = null;
+        }
+
+        /**
+         * Constructor.
+         *
+         * @param requestedTemplate the requested template to use, not null
+         */
+        private LocalizedPrinterParser(String requestedTemplate) {
+            // param validated by caller
+            this.dateStyle = null;
+            this.timeStyle = null;
+            this.requestedTemplate = requestedTemplate;
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
             Chronology chrono = Chronology.from(context.getTemporal());
-            return formatter(context.getLocale(), chrono).toPrinterParser(false).format(context, buf);
+            return formatter(context.getLocale(), chrono).toPrinterParser(false).format(context, buf, optional);
         }
 
         @Override
@@ -4846,7 +5164,8 @@ public final class DateTimeFormatterBuilder {
         /**
          * Gets the formatter to use.
          * <p>
-         * The formatter will be the most appropriate to use for the date and time style in the locale.
+         * The formatter will be the most appropriate to use for the date and time style, or
+         * the requested template for the locale.
          * For example, some locales will use the month name while others will use the number.
          *
          * @param locale  the locale to use, not null
@@ -4855,23 +5174,22 @@ public final class DateTimeFormatterBuilder {
          * @throws IllegalArgumentException if the formatter cannot be found
          */
         private DateTimeFormatter formatter(Locale locale, Chronology chrono) {
-            String key = chrono.getId() + '|' + locale.toString() + '|' + dateStyle + timeStyle;
-            DateTimeFormatter formatter = FORMATTER_CACHE.get(key);
-            if (formatter == null) {
-                String pattern = getLocalizedDateTimePattern(dateStyle, timeStyle, chrono, locale);
-                formatter = new DateTimeFormatterBuilder().appendPattern(pattern).toFormatter(locale);
-                DateTimeFormatter old = FORMATTER_CACHE.putIfAbsent(key, formatter);
-                if (old != null) {
-                    formatter = old;
-                }
-            }
-            return formatter;
+            String key = chrono.getId() + '|' + locale.toString() + '|' +
+                    (requestedTemplate != null ? requestedTemplate : Objects.toString(dateStyle) + timeStyle);
+
+            return FORMATTER_CACHE.computeIfAbsent(key, k ->
+                new DateTimeFormatterBuilder()
+                    .appendPattern(requestedTemplate != null ?
+                        getLocalizedDateTimePattern(requestedTemplate, chrono, locale) :
+                        getLocalizedDateTimePattern(dateStyle, timeStyle, chrono, locale))
+                    .toFormatter(locale));
         }
 
         @Override
         public String toString() {
-            return "Localized(" + (dateStyle != null ? dateStyle : "") + "," +
-                (timeStyle != null ? timeStyle : "") + ")";
+            return "Localized(" + (requestedTemplate != null ? requestedTemplate :
+                (dateStyle != null ? dateStyle : "") + "," +
+                (timeStyle != null ? timeStyle : "")) + ")";
         }
     }
 
@@ -4896,7 +5214,7 @@ public final class DateTimeFormatterBuilder {
          * @param minWidth  the minimum field width, from 1 to 19
          * @param maxWidth  the maximum field width, from minWidth to 19
          */
-        WeekBasedFieldPrinterParser(char chr, int count, int minWidth, int maxWidth) {
+        private WeekBasedFieldPrinterParser(char chr, int count, int minWidth, int maxWidth) {
             this(chr, count, minWidth, maxWidth, 0);
         }
 
@@ -4910,7 +5228,7 @@ public final class DateTimeFormatterBuilder {
          * @param subsequentWidth  the width of subsequent non-negative numbers, 0 or greater,
          * -1 if fixed width due to active adjacent parsing
          */
-        WeekBasedFieldPrinterParser(char chr, int count, int minWidth, int maxWidth,
+        private WeekBasedFieldPrinterParser(char chr, int count, int minWidth, int maxWidth,
                 int subsequentWidth) {
             super(null, minWidth, maxWidth, SignStyle.NOT_NEGATIVE, subsequentWidth);
             this.chr = chr;
@@ -4943,8 +5261,8 @@ public final class DateTimeFormatterBuilder {
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
-            return printerParser(context.getLocale()).format(context, buf);
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
+            return printerParser(context.getLocale()).format(context, buf, optional);
         }
 
         @Override
@@ -5041,18 +5359,18 @@ public final class DateTimeFormatterBuilder {
          *
          * @param textStyle  the text style, not null
          */
-        DayPeriodPrinterParser(TextStyle textStyle) {
+        private DayPeriodPrinterParser(TextStyle textStyle) {
             // validated by caller
             this.textStyle = textStyle;
         }
 
         @Override
-        public boolean format(DateTimePrintContext context, StringBuilder buf) {
-            Long hod = context.getValue(HOUR_OF_DAY);
+        public boolean format(DateTimePrintContext context, StringBuilder buf, boolean optional) {
+            Long hod = context.getValue(HOUR_OF_DAY, optional);
             if (hod == null) {
                 return false;
             }
-            Long moh = context.getValue(MINUTE_OF_HOUR);
+            Long moh = context.getValue(MINUTE_OF_HOUR, optional);
             long value = Math.floorMod(hod, 24) * 60 + (moh != null ? Math.floorMod(moh, 60) : 0);
             Locale locale = context.getLocale();
             LocaleStore store = findDayPeriodStore(locale);
